--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500&display=swap');
 :root{
-    --primary-color:blue;
+    --primary-color:#a855f7;
 }
 body{   
     font-family: 'Open Sans', sans-serif;
+}
+hr{
+    margin: 2rem 0rem;
 }
 /**container**/
 .container{
@@ -17,7 +20,7 @@ body{
 
 /**links**/
 .link{
-    text-decoration:none;
+    text-decoration: none;
     padding:o.5rem 1rem;
 }
 .primary-link{
@@ -30,4 +33,13 @@ body{
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
     color:white;
+}
+/**lists**/
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-item-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
 }
