--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 :root{
     --primary-color:#3b82f6;
     --dark-gray:#6b7280;
+    --off-white:#d1d5db;
 }
 body{   
     font-family: 'Open Sans', sans-serif;
@@ -78,5 +79,14 @@ hr{
 .movie .movie-heading{
     font-size: 2rem;
     color:var(--dark-gray);
+}
+.section{
+    padding: 2rem;
+}
+.section h1{
+    text-align: center; 
 
+}
+.div {
+    background-color: var(--off-white);
 }
