--- a/lib/stylee.css
+++ b/lib/stylee.css
@@ -12,7 +12,7 @@ hr{
 }
 /**container**/
 .container{
-    padding-left:1rem;
+    padding-left:0.5rem;
     padding-right:1rem;
 }
 .container-center{
@@ -23,7 +23,7 @@ hr{
 /**links**/
 .link{
     text-decoration: none;;
-    padding:o.5rem 1rem;
+    padding:0.5rem 0.5rem;
 }
 .primary-link{
     background-color: var(--primary-color);
@@ -82,7 +82,7 @@ hr{
     text-align: center;
 }
 .section{
-    padding: 2rem;
+    padding: 1rem;
 }
 .section h1{
     text-align: center; 
