--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 hr{
-    margin: 2rem 0rem;
+    margin: 1rem 0rem;
 }
 /**container**/
  .container{
-    padding-left:1rem;
+    padding-left:0.5rem;
     padding-right:1rem;
 }
 .container-center{
@@ -30,6 +30,8 @@ hr{
     background-color: var(--primary-color);
     border-radius: 1rem;
     color:white; 
+    margin-left: 1rem;
+    margin-right: 2rem;
     border: 0.5px solid var(--primary-color);
 }
 .secondary-link{
