--- a/lib/stylee.css
+++ b/lib/stylee.css
@@ -22,7 +22,7 @@ hr{
 
 /**links**/
 .link{
-    text-decoration: none;;
+    text-decoration: none;
     padding:0.5rem 0.5rem;
 }
 .primary-link{
@@ -68,7 +68,7 @@ hr{
     font-weight: bold;
 }
 .movie{
-    padding:2rem;
+    padding: 2rem;
 
 }
 .movie .movie-poster{
