--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ hr{
    display: block;
     margin:auto;
 }
+.small{
+    text-align: center;
+   display :block;
+}
 
 /**links**/
 .link{
@@ -78,6 +82,11 @@ hr{
     padding:2rem;
 
 }
+.center{
+    text-align: center;
+    margin-top: 0.5rem;
+    display: block;
+}
 .movie .movie-poster{
     max-width: 370px;
     display: block;
@@ -106,6 +115,7 @@ hr{
 }
 .section p{
     text-align: center;
+    margin-bottom: 30px;
 }
 .div {
     background-color: var(--off-white);
