--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ hr{
 .list-item-inline{
     display: inline;
     padding: 0rem 0.5rem;
+    font-size: larger;
+    text-decoration: underline;
+   
+  
+    font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 /**navigation**/
 
@@ -126,7 +131,21 @@ hr{
     padding:2rem 1rem;
     text-align: center;
     color:white;
-    border-top-right-radius: 1rem;
+   
+
+    border-top-right-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+    border-top-left-radius: 1.5rem;
+
+}
+
+.img{
+        padding: 0.5rem;
+        max-width:4%;
+       border-radius:  7rem;
+        height:auto;
+    
 }
 .footer .link{
     color:white;
